# d33

./: .gitignore  BUILD_INSTRUCTIONS.md  CHANGES_SUMMARY.md  CONFIG_SETUP.md  README_WINDOWS.md  TROUBLESHOOTING.md  build.bat  build_complete.bat  build_from_config.bat  config.json  debug_build.bat  discord_payload.py  pyproject.toml  quick_build.bat  test_replacement.bat
libraries/: credentials.py  keylogger.py
